Story 1.1.2 - Configure DI & app startup

--- a/src/backend/TodoApp.Api/appsettings.Development.json
+++ b/src/backend/TodoApp.Api/appsettings.Development.json
@@ -1,8 +1,16 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information"
     }
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:3000",
+      "http://localhost:3001",
+      "https://localhost:3000",
+      "https://localhost:3001"
+    ]
   }
 }
