--- a/src/backend/TodoApp.Api/appsettings.json
+++ b/src/backend/TodoApp.Api/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cors": {
+    "AllowedOrigins": [
+      "http://localhost:3000",
+      "https://localhost:3000"
+    ]
+  },
+  "Jwt": {
+    "SecretKey": "your-256-bit-secret-key-change-in-production",
+    "Issuer": "TodoApp",
+    "Audience": "TodoApp.Client",
+    "ExpirationMinutes": 1440
+  }
 }
