--- a/src/backend/TodoApp.Api/appsettings.Development.json
+++ b/src/backend/TodoApp.Api/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=todo_app;User Id=postgres;Password=postgres;"
+  },
   "Cors": {
     "AllowedOrigins": [
       "http://localhost:3000",
