Fix issues with the task context menu

--- a/src/backend/TodoApp.UnitTests/TodoApp.UnitTests.csproj
+++ b/src/backend/TodoApp.UnitTests/TodoApp.UnitTests.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TodoApp.Api\TodoApp.Api.csproj" />
     <ProjectReference Include="..\TodoApp.Application\TodoApp.Application.csproj" />
     <ProjectReference Include="..\TodoApp.Domain\TodoApp.Domain.csproj" />
   </ItemGroup>
